--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [workspace]
-members = ["mtl","hal","zpu","main"]
+# members = ["mtl","hal","zpu","main"]
+members = ["mtl"]
 
-[profile.dev]
-overflow-checks = false
+# [profile.dev]
+# overflow-checks = false
 
-[profile.test]
-opt-level = 3
+# [profile.test]
+# opt-level = 3
