--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -2,12 +2,12 @@
 name = "main"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
+# build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zpu = {path = "../zpu" }
+zpu = { path = "../zpu" }
 # hal = {path = "../hal" }
 # primal = "0.3.2"
 rand = "0.8.5"
